--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rumble-render",
-  "version": "1.0.0",
+  "name": "rumble-render-pro",
+  "version": "2.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
